# go1_meet

./: README.md  pyproject.toml
.github/workflows/: ci.yml
go1_meeting/: hooks.py  modules.txt
go1_meeting/go1_meeting/doctype/go1_meet/: go1_meet.js  go1_meet.json  go1_meet.py  test_go1_meet.py
go1_meeting/go1_meeting/doctype/meeting_external_participant/: meeting_external_participant.json  meeting_external_participant.py
go1_meeting/go1_meeting/doctype/meeting_external_participants/: meeting_external_participants.json  meeting_external_participants.py
go1_meeting/go1_meeting/doctype/meeting_integration/: meeting_integration.js  meeting_integration.json  meeting_integration.py  test_meeting_integration.py
go1_meeting/go1_meeting/doctype/meeting_participant/: meeting_participant.json  meeting_participant.py
go1_meeting/go1_meeting/doctype/meeting_participants/: meeting_participants.json  meeting_participants.py
go1_meeting/go1_meeting/doctype/user_platform_credentials/: test_user_platform_credentials.py  user_platform_credentials.js  user_platform_credentials.json  user_platform_credentials.py
go1_meeting/go1_meeting/integration/: validation.py
go1_meeting/go1_meeting/page/whereby_embed/: whereby_embed.css  whereby_embed.js  whereby_embed.json
go1_meeting/go1_meeting/workspace/go1_meeting/: go1_meeting.json
go1_meeting/public/js/: meet_utils.js
